fixed font-size and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ img {
   }
 
   h2 {
-    font-size: 2.5vw;
+    font-size: 2.3vw;
   }
 
   p {
